# mindBlock_app

./: .env.development.example  .gitignore  .scope-lock.json  CONTRIBUTING.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_#320.md  LICENSE  ONBOARDING_IMPLEMENTATION_SUMMARY.md  ONBOARDING_QUICKSTART.md  PR_MESSAGE.md  README.md  REQUEST_SIZE_LIMIT_COMPLETE_SUMMARY.md  contributing.md  data-source.ts  nest-cli.json  package-lock.json  package.json  tsconfig.build.tsbuildinfo  tsconfig.json
.github/: PR_VALIDATION_GUIDE.md
.github/workflows/: ci-cd.yml  ci.yml  deploy.yml
archivedCodes/: .env.example  README.md  data-source.js.map  data-source.ts  jest.config.js  package.json
archivedCodes/http/: endpoint.http
archivedCodes/src/: seed.ts
archivedCodes/test/: user-activity.e2e-spec.ts
archivedCodes/workflows/: deploy.yml
backend/: .env.example  DEPLOYMENT_CHECKLIST.md  README.md  REQUEST_SIZE_LIMIT_CONFIG.md  SWAGGER_DOC.md  data-source.ts  database.sqlite  lint_output.txt  lint_output_utf8.txt  package-lock.json  package.json  total_final_lint_output.txt  tsconfig.build.json  tsconfig.build.tsbuildinfo  tsconfig.json  ultra_final_lint_output.txt  verify_xp.ps1
backend/docs/: API_VERSIONING.md  RBAC.md
backend/http/: endpoint.http  progressPoints.test.http
backend/scripts/: create-analytics-tables.sql  seed-categories.ts
backend/src/: app.module.ts  data-source.js  endpoint.http  index.ts  main.ts  seed.ts
contract/: Cargo.toml
contract/src/: lib.rs
contracts/: Cargo.toml  README.md
docs/: redis-caching-implementation.md
frontend/: package.json  tailwind.config.js
http/: endpoint.http
middleware/: .env.example  .eslintrc.js  .gitignore  README.md  eslint.config.mjs  jest.config.js  jest.e2e.config.ts  jest.integration.config.ts  jest.unit.config.js  package.json  tsconfig.json
scripts/: create-iq-attempts-table.sql  git-scope-check.js
src/: app.module.ts  main.ts  seed.ts
(+933 files in other folders)
